@@ -87,9 +87,8 @@
   (cond
    ((featurep 'xemacs)
     (require 'w3m-xmas))
-   ((and (>= emacs-major-version 22)
-	 (fboundp 'define-coding-system))
-    (require 'w3m-e22))
+   ((>= emacs-major-version 23)
+    (require 'w3m-e23))
    ((>= emacs-major-version 21)
     (require 'w3m-e21))
    ((= emacs-major-version 20)
@@ -154,7 +153,7 @@
 
 (defconst emacs-w3m-version
   (eval-when-compile
-    (let ((rev "$Revision: 1.1097 $"))
+    (let ((rev "$Revision: 1.1098 $"))
       (and (string-match "\\.\\([0-9]+\\) \\$\\'" rev)
 	   (setq rev (- (string-to-number (match-string 1 rev)) 1030))
 	   (concat "1.4.0" (if (>= rev 0) (format ".%d" (+ rev 50)) "")))))
