@@ -1,5 +1,13 @@
 2005-02-14  Katsumi Yamaoka  <yamaoka@jpl.org>
 
+	* w3m.el: Load w3m-e23.el for Emacs 23.
+
+	* w3mhack.el (w3mhack-module-list): Use w3m-e23.el for Emacs 23.
+
+	* w3m-e23.el: Rename from w3m-e22.el.
+
+2005-02-14  Katsumi Yamaoka  <yamaoka@jpl.org>
+
 	* shimbun/sb-rss.el (shimbun-get-headers): Display an error
 	message rather than signaling an error when xml-parse-region fails
 	so that MUA may not be discontinued.
